@@ -1,6 +1,8 @@
 since version 1.1.2 release
 ===========================
  * add isoformat method for compatibility with python datetime(issue #152).
+ * make 'proleptic_gregorian' default calendar for cftime.datetime
+   so that dayofwk,dayofyr methods don't fail (issue #169).
 
 version 1.1.2 (release tag v1.1.2rel)
 =====================================
